adicionada tag DIV

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <div class="parte01">
  <h1>Grupo Rio de Janeiro</h1>
  <img id="ima1" src="rio.jpg">
  <ul>
@@ -18,6 +19,9 @@
     <li>Simone</li>
     <li>Arilson</li>
  </ul>
+ </div>
+ 
+ <div class="parte02">
  <h1> Grupo Vitória</h1>
  <img id="ima2" src="vit.jpg">
  <ol>
@@ -27,6 +31,7 @@
     <li>Simome</li>
     <li>Adriana</li>
  </ol>
+ </div>
 </body>
 </html>
 
