--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="parte01">
- <h1>Grupo Rio de Janeiro</h1>
+ <h1><p class="rio">Grupo Rio de Janeiro</p></h1>
  <img id="ima1" src="rio.jpg">
  <ul>
     <li>Lorran</li>
@@ -20,7 +20,7 @@
     <li>Arilson</li>
  </ul>
  </div>
- 
+
  <div class="parte02">
  <h1> Grupo Vitória</h1>
  <img id="ima2" src="vit.jpg">
